added provision to tolearte transient commit failed exception during rebalance which requires manual intervention to restart the failed tasks